Remove jquery scrolling, fix z-indexes

--- a/src/documentation/sass/AppContainer.scss
+++ b/src/documentation/sass/AppContainer.scss
@@ -33,7 +33,7 @@ body {
   left: 0;
   position: fixed;
   right: 0;
-  z-index: 600;
+  z-index: $ms-zIndex-5;
 
   .menuButton {
     background: transparent;
@@ -127,7 +127,7 @@ body {
       @include left($Nav-width);
       @include right(0);
       top: 0;
-      z-index: 1;
+      z-index: $ms-zIndex-1;
     }
 
     .App-nav {
